--- a/web/index.html
+++ b/web/index.html
@@ -6,9 +6,6 @@
   <link rel="stylesheet" href="css/smoothness/jquery-ui-1.8.16.custom.less">
   <link rel="stylesheet" href="css/slick.grid.less">
 
-  <script defer src="main.dart" type="application/dart"></script>
-  <script defer src="packages/browser/dart.js"></script>
-
   <script defer src="js/jquery/jquery-1.7.min.js"></script>
   <script defer src="js/jquery/jquery.event.drag-2.2.js"></script>
   <script defer src="js/jquery/jquery.event.drop-2.2.js"></script>
@@ -17,8 +14,11 @@
   <script defer src="js/slick/slick.dataview.js"></script>
   <script defer src="js/slick/slick.groupitemmetadataprovider.js"></script>
   <script defer src="js/slick_wrapper/slick.wrapper.js"></script>
+
+  <script defer src="main.dart" type="application/dart"></script>
+  <script defer src="packages/browser/dart.js"></script>
 </head>
 <body>
-<my-app>Loading...</my-app>
+<div id="myGrid2" style="width: 500px; height: 300px;"></div>
 </body>
 </html>
